--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 
 }
 
+html {
+    scroll-behavior: smooth;
+}
 
 
 *,*::before,*::after {
@@ -1694,6 +1697,34 @@ footer h2 {
     #logo.sticky {
         width:64px;
         height:64px;
+    }
+
+    #layoutDcha button {
+        height: 68px;
+        font-size: 23px;
+
+
+    }
+
+    .configuraciones {
+
+        height: 72px;
+        width: 72px;
+
+    }
+
+    .configuraciones > button {
+
+        height: 70px;
+        width: 70px;
+
+    
+    }
+    
+    #configuracionIdioma {
+        font-size: 35px;
+
+    
     }
 
 
