--- a/style.css
+++ b/style.css
@@ -919,7 +919,7 @@ li a:hover {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
-    background-image: linear-gradient(186deg, rgba(0, 0, 0, 0.74) 12%, rgba(0, 0, 0, 0.74) 88%),url("https://www.wallpapertip.com/wmimgs/136-1369543_laptop-coding.jpg");
+    background-image: linear-gradient(186deg, rgba(0, 0, 0, 0.74) 12%, rgba(0, 0, 0, 0.74) 88%),url("./fondoPortatil.jpg");
     padding: 150px;
     
 }
